application/k8-deployment/api-golang/components/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
  namespace: app-ns
spec:
  type: ClusterIP
  selector:
    app: golang-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
# PORT FORWARD TO VERIFY IF SERVICE IS WORKING AS INTENDED:
# kubectl port-forward svc/golang-service 8000:8000
